syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum NormalAskType {
  UNKNOWN = 0;
  PRIMARYADDITIONAL = 1;
  SECONDARY = 2;
}

message NormalAsk {
  string id = 1;
  NormalAskType type = 2;
  string account_id = 3;
  uint32 price = 4;
  uint32 amount = 5;
}
