syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum RenewableAskHistoryType {
  UNKNOWN = 0;
  PRIMARY = 1;
  SECONDARY = 2;
}

message RenewableAskHistory {
  string id = 1;
  RenewableAskHistoryType type = 2;
  string account_id = 3;
  uint32 price = 4;
  uint32 amount = 5;
  bool is_accepted = 6;
  uint32 contract_price = 7;
}
